@@ -609,14 +609,12 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 	bitstr_t *avail_bitmap = NULL, *total_bitmap = NULL;
 	bitstr_t *backup_bitmap = NULL;
 	bitstr_t *possible_bitmap = NULL;
-	bitstr_t *partially_idle_node_bitmap = NULL;
 	int max_feature, min_feature;
 	bool runable_ever  = false;	/* Job can ever run */
 	bool runable_avail = false;	/* Job can run with available nodes */
 	bool tried_sched = false;	/* Tried to schedule with avail nodes */
 	static uint32_t cr_enabled = NO_VAL;
 	bool preempt_flag = false;
-	select_type_plugin_info_t cr_type = SELECT_TYPE_INFO_NONE;
 	int shared = 0, select_mode;
 
 	if (test_only)
@@ -649,28 +647,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 	if (slurm_get_preempt_mode() != PREEMPT_MODE_OFF)
 		preempt_flag = true;
 
-	if (cr_enabled) {
-		/* Determine which nodes might be used by this job based upon
-		 * its ability to share resources */
-		job_ptr->cr_enabled = cr_enabled; /* CR enabled for this job */
-
-		cr_type = (select_type_plugin_info_t) slurmctld_conf.
-							select_type_param;
-
-		/* Set the partially_idle_node_bitmap to reflect the
-		 * idle and partially idle nodes */
-		error_code = select_g_get_info_from_plugin (SELECT_BITMAP,
-					job_ptr, &partially_idle_node_bitmap);
-		if (error_code != SLURM_SUCCESS) {
-			FREE_NULL_BITMAP(partially_idle_node_bitmap);
-			return error_code;
-		}
-                debug3("Job %u shared %d CR type %d num_procs %d nbits %d",
-		     job_ptr->job_id, shared, cr_enabled, cr_type,
-		     job_ptr->num_procs,
-		     bit_set_count(partially_idle_node_bitmap));
-        }
-
 	if (job_ptr->details->req_node_bitmap) {  /* specific nodes required */
 		/* We have already confirmed that all of these nodes have a
 		 * usable configuration and are in the proper partition.
@@ -680,7 +656,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 				job_ptr->details->req_node_bitmap);
 		}
 		if (total_nodes > max_nodes) {	/* exceeds node limit */
-			FREE_NULL_BITMAP(partially_idle_node_bitmap);
 			return ESLURM_REQUESTED_PART_CONFIG_UNAVAILABLE;
 		}
 
@@ -688,16 +663,7 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 		/* Should we check memory availability on these nodes? */
 		if (!bit_super_set(job_ptr->details->req_node_bitmap,
 				   avail_node_bitmap)) {
-			FREE_NULL_BITMAP(partially_idle_node_bitmap);
 			return ESLURM_NODE_NOT_AVAIL;
-		}
-
-		if (partially_idle_node_bitmap) {
-			if (!bit_super_set(job_ptr->details->req_node_bitmap,
-					   partially_idle_node_bitmap)) {
-				FREE_NULL_BITMAP(partially_idle_node_bitmap);
-				return ESLURM_NODES_BUSY;
-			}
 		}
 
 		if (!preempt_flag) {
@@ -705,16 +671,12 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 				if (!bit_super_set(job_ptr->details->
 						   req_node_bitmap,
 						   share_node_bitmap)) {
-					FREE_NULL_BITMAP(
-						partially_idle_node_bitmap);
 					return ESLURM_NODES_BUSY;
 				}
 			} else {
 				if (!bit_super_set(job_ptr->details->
 						   req_node_bitmap,
 						   idle_node_bitmap)) {
-					FREE_NULL_BITMAP(
-						partially_idle_node_bitmap);
 					return ESLURM_NODES_BUSY;
 				}
 			}
@@ -759,11 +721,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 			}
 
 			bit_and(node_set_ptr[i].my_bitmap, avail_node_bitmap);
-			if (partially_idle_node_bitmap) {
-				bit_and(node_set_ptr[i].my_bitmap,
-					partially_idle_node_bitmap);
-			}
-
 			if (!preempt_flag) {
 				if (shared) {
 					bit_and(node_set_ptr[i].my_bitmap,
@@ -840,7 +797,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 					avail_nodes = 0;
 					break;
 				}
-				FREE_NULL_BITMAP(partially_idle_node_bitmap);
 				FREE_NULL_BITMAP(total_bitmap);
 				FREE_NULL_BITMAP(possible_bitmap);
 				*select_bitmap = avail_bitmap;
@@ -870,7 +826,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 						      preemptee_job_list);
 			if ((pick_code == SLURM_SUCCESS) &&
 			     (bit_set_count(avail_bitmap) <= max_nodes)) {
-				FREE_NULL_BITMAP(partially_idle_node_bitmap);
 				FREE_NULL_BITMAP(total_bitmap);
 				FREE_NULL_BITMAP(possible_bitmap);
 				*select_bitmap = avail_bitmap;
@@ -949,7 +904,6 @@ _pick_best_nodes(struct node_set *node_set_ptr, int node_set_size,
 	} else {
 		FREE_NULL_BITMAP(possible_bitmap);
 	}
-	FREE_NULL_BITMAP(partially_idle_node_bitmap);
 	return error_code;
 }
 
